Style fix: made images half covered

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1136,7 +1136,7 @@ input.form-input {
   .text-content {
     
     display: block;
-    padding-left: 60px;
+    margin-left: 60px;
     position: relative;
     margin-top: -20px;
     font-size: 1.2em;
